# Memora

./: .gitignore  README.md  demo_ticket.json  pyproject.toml
.cursor/plans/: interlock_poc_planning_80ea6b53.plan.md
.cursor/rules/: core.md
docs/: DESIGN.md  MVP Overview.md  MVP Plan.md  Overview.md  PLANING.md  PROTOCOL.md  RUNNING.md
docs/sessions transcripts/: cursor_ticket_id_18_discussion.md
interlock/: __init__.py  fsm.py  gates.py  server.py  storage.py
interlock/schemas/: __init__.py  artifacts.py  responses.py  ticket.py
test/: TESTING.md  demo.py  test_interlock.py  verify.py
tests/: test_ticket_dialog.py
